--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <div style="text-align: center;">
         <h1>multipages system</h1>
         <p>para avançar até a proxima pagina, você deve acertar a palavrinha magica</p>
-        <input type="password" id="password" placeholder="digite a palavra magica"><br>
+        <input type="usuario" id="usuario" placeholder="digite o usuario"><br>
+        <input type="password" id="password" placeholder="digite a senha"><br>
         <button onclick="tentativa()">realizar tentativa</button>
         <p id="lista"></p>
 
